--- a/CSS/practica.css
+++ b/CSS/practica.css
@@ -1,26 +1,13 @@
-::root {
-    colorPrincipal: blue;
-    tamanio: 200px;
+body {
+    background-color: black;
 }
 
-p {
-    height: tamanio;
-    background: colorPrincipal;
+.boton1 {
+    float: left;
 }
 
-.rojo {
-    background: darkred;
-    box-shadow: 0px 5px 0px 0px red;
-}
-
-.rojo:hover {
-    background: gold;
-    box-shadow: 0px 5px 0px 0px burlywood;
-}
-
-.rojo:active {
-    background: blue;
-    box-shadow: 15px 15px 15px 15px red;
+.boton2 {
+    float: right;
 }
 
 #tablero {
